@@ -399,7 +399,7 @@ done
 
 echo 'stmp-dirs: force'
 echo '	for d in '"$dirs"'; do \'
-echo '	  if [ -d $$d ]; then true; else mkdir $$d; fi \'
+echo '	  if [ -d $$d ]; then true; else mkdir $$d; fi; \'
 echo '	done'
 echo '	if [ -f stmp-dirs ]; then true; else touch stmp-dirs; fi'
 
